[tool.poetry]
name = "supreltd-api"
version = "0.1.0"
description = ""
authors = ["SupreLTD <balanaaarrrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.26"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
